--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <li class="list-group-item">Jika total belanja lebih besar dari 200.000 maka dapat diskon 5%</li>
                     <li class="list-group-item">Untuk saat ini input total belanja dan/atau tunai tidak bisa lebih dari 1.000.000 (Satu Juta)</li>
                     <li class="list-group-item">Github <a href="https://github.com/znladnsyh">disini</a></li>
-                    <li class="list-group-item">Jangan lupa bintangnya :')</li>
+                    <li class="list-group-item">Masyaallah</li>
                     <li><a href="https://github.com/znladnsyh/MiniKasir" class="btn btn-primary">Code Here</a></li>
                   </ol>
                 </div>
