--- a/index.html
+++ b/index.html
@@ -1,86 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mini Kasir JS</title>
-    <script src="script/jquery.min.js"></script>
-    <script type="text/javascript" src="script/script.js"></script>
-    <link rel="stylesheet" href="bootstrap-5.2.3-dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="style/style.css" />
-  </head>
-  <body>
-    <div class="container pb-5">
-      <div class="row">
-        <div class="col-sm mt-3">
-          <div class="card" >
-            <div class="card-header">
-              <h1 class="text-center">Mini Kasir</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mini Kasir JS</title>
+  <script src="script/jquery.min.js"></script>
+  <script type="text/javascript" src="script/script.js"></script>
+  <link rel="stylesheet" href="bootstrap-5.2.3-dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" />
+  <link rel="stylesheet" href="style/style.css" />
+</head>
+<body>
+  <div class="container pb-5">
+    <div class="row">
+      <div class="col-sm mt-3">
+        <div class="card" >
+          <div class="card-header">
+            <h1 class="text-center">Mini Kasir</h1>
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm mt-3">
+                <div class="form-floating">
+                  <input type="number" class="form-control" id="totalBelanja" placeholder="Tunai" />
+                  <label for="floatingInput">Total Belanja</label>
+                </div>
+              </div>
             </div>
-            <div class="card-body">
-              <div class="row">
-                <div class="col-sm mt-3">
-                  <div class="form-floating">
-                    <input type="number" class="form-control" id="totalBelanja" placeholder="Tunai" />
-                    <label for="floatingInput">Total Belanja</label>
-                  </div>
-                </div>
-              </div>
 
-              <div class="row">
-                <div class="col-sm">
-                  <div class="form-floating">
-                    <input type="text" readonly class="form-control-plaintext" id="diskon" placeholder="0" value="0" />
-                    <label for="floatingPlaintextInput">Diskon (%)</label>
-                  </div>
+            <div class="row">
+              <div class="col-sm">
+                <div class="form-floating">
+                  <input type="text" readonly class="form-control-plaintext" id="diskon" placeholder="0" value="0" />
+                  <label for="floatingPlaintextInput">Diskon (%)</label>
                 </div>
               </div>
+            </div>
 
-              <div class="row">
-                <div class="col-sm">
-                  <div class="form-floating">
-                    <input type="number" readonly class="form-control-plaintext" id="totalHarga" placeholder="0" value="0" />
-                    <label for="floatingPlaintextInput">Total Harga Rp.</label>
-                  </div>
+            <div class="row">
+              <div class="col-sm">
+                <div class="form-floating">
+                  <input type="number" readonly class="form-control-plaintext" id="totalHarga" placeholder="0" value="0" />
+                  <label for="floatingPlaintextInput">Total Harga Rp.</label>
                 </div>
               </div>
+            </div>
 
-              <div class="row">
-                <div class="col-sm">
-                  <div class="form-floating">
-                    <input type="number" class="form-control" id="tunai" placeholder="Tunai" />
-                    <label for="floatingInput">Tunai</label>
-                  </div>
+            <div class="row">
+              <div class="col-sm">
+                <div class="form-floating">
+                  <input type="number" class="form-control" id="tunai" placeholder="Tunai" />
+                  <label for="floatingInput">Tunai</label>
                 </div>
               </div>
+            </div>
 
-              <div class="row">
-                <div class="col-sm">
-                  <div class="form-floating">
-                    <input type="number" readonly class="form-control-plaintext" id="kembalian" value="0" />
-                    <label for="floatingPlaintextInput">Kembalian Rp.</label>
-                  </div>
+            <div class="row">
+              <div class="col-sm">
+                <div class="form-floating">
+                  <input type="number" readonly class="form-control-plaintext" id="kembalian" value="0" />
+                  <label for="floatingPlaintextInput">Kembalian Rp.</label>
                 </div>
               </div>
+            </div>
 
-              <div class="row">
-                <div class="col-sm mt-3">
-                  <ol class="list-group list-group-numbered">
-                    <li class="list-group-item">Untuk penulisan input uang langsung inputkan nominal nya (100.000 menjadi 100000)</li>
-                    <li class="list-group-item">Jika total belanja lebih besar dari 150.000 maka dapat diskon 3%</li>
-                    <li class="list-group-item">Jika total belanja lebih besar dari 200.000 maka dapat diskon 5%</li>
-                    <li class="list-group-item">Untuk saat ini input total belanja dan/atau tunai tidak bisa lebih dari 1.000.000 (Satu Juta)</li>
-                    <li class="list-group-item">Github <a href="https://github.com/znladnsyh">disini</a></li>
-                    <li class="list-group-item">Masyaallah</li>
-                    <li><a href="https://github.com/znladnsyh/MiniKasir" class="btn btn-primary">Code Here</a></li>
-                  </ol>
-                </div>
-              </div>
+            <div class="row">
+              <div class="col-sm mt-3">
+                <ol class="list-group list-group-numbered">
+                  <li class="list-group-item">Untuk penulisan input uang langsung inputkan nominal nya (100.000 menjadi 100000)</li>
+                  <li class="list-group-item">Jika total belanja lebih besar dari 150.000 maka dapat diskon 3%</li>
+                  <li class="list-group-item">Jika total belanja lebih besar dari 200.000 maka dapat diskon 5%</li>
+                  <li class="list-group-item">Untuk saat ini input total belanja dan/atau tunai tidak bisa lebih dari 1.000.000 (Satu Juta)</li>
+                </ol>
+                <br>
+                <a href="https://github.com/znladnsyh/MiniKasir">
+                  <button style="width:100%"> 
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span> Source Code
+                  </button>
+                </a>
+                <br>
+                <br>
+                <a href="https://github.com/znladnsyh" style="text-decoration: none;">
+                 <button class="cssbuttons-io-button" style="width:100%">Github
+                  <div class="icon">
+                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z" fill="currentColor"></path></svg>
+                  </div>
+                </button>
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</div>
+</body>
 </html>
